crates/rpstate-macros/tests/fails/lookup_write_violation.stderr
error[E0308]: mismatched types
  --> tests/fails/lookup_write_violation.rs:11:22
   |
11 |     #[state(lookup = "host", parent = NetworkState, export_mut)]
   |                      ------^^^^^^^^^^^^^^^^^^^^^^^
   |                      |
   |                      expected `Writable<_>`, found `ReadOnly<String>`
   |                      arguments to this function are incorrect
   |
   = note: expected struct `Writable<_>`
              found struct `ReadOnly<String>`
note: function defined here
  --> tests/fails/lookup_write_violation.rs:11:22
   |
11 |     #[state(lookup = "host", parent = NetworkState, export_mut)]
   |                      ^^^^^^

error[E0599]: no method named `set` found for struct `rpstate::store::Field<u16, RedbStore>` in the current scope
  --> tests/fails/lookup_write_violation.rs:17:17
   |
17 |     dummy_field.set(9090);
   |                 ^^^
   |
help: there is a method `get` with a similar name, but with different arguments
  --> $WORKSPACE/crates/rpstate/src/store/field.rs
   |
   |     pub fn get(&self) -> TValue {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: one of the expressions' fields has a method of the same name
   |
17 |     dummy_field.signal.set(9090);
   |                 +++++++
